--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
+.title-container {
+  margin: 15px 5px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0 auto;
+  margin-bottom: 10px;
+}
+
+.title {
+  font-size: 16px;
+  font-weight: 500;
+  padding: .5em;
+  align-items: flex-start;
+  justify-content: flex-start;
+}
+
+.container {
+  width: 50%;
+  height: 80%;
+  background-color: rgb(255, 255, 255);
+  border-radius: 5px;
+  padding: 20px;
+  margin: 10px auto;
+  margin-top: 3em;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(0, 0, 0);
+  box-shadow: 50px 50px 70px rgba(0, 0, 0, 0.458);
 }
 
-.App-link {
-  color: #61dafb;
+.button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 0%;
+  border: 0.5px solid #6c6c6ce4;
+  width: 97%;
+  border-radius: 10px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  margin-top: .5em;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.button-right {
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+.plus-button {
+  background-color: rgba(200, 200, 200, 0.318);
+  border: 1px solid #5656563f;
+  border-radius: 50%;
+  color: #70103a;
+  width: 30px;
+  height: 30px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  font-weight: regular;
+  font-size: 20px;
+  cursor: pointer;
+  margin-right: auto;
+}
+
+.content {
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s;
+}
+
+.expanded .content {
+  max-height: 1000px;
+  padding: 1px;
+  overflow: auto;
+  font-size: 14px;
+  color: #686868;
+  margin-bottom: 1em;
+  margin-left: .8em;
+  margin-right: .8em;
 }
