--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,19 @@
+body::before {
+  content: "";
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('grainy.jpg'); /* Replace with the path to your texture image */
+  background-repeat: repeat;
+  z-index: -1; /* Ensure the pseudo-element is below the content */
+  mix-blend-mode: multiply; /* Use the desired blending mode, e.g., overlay */
+}
+
 body {
   margin: 0;
+  background-image: linear-gradient(to right, #5b1452, #9d2d2d);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
